--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^3.5.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
