circular progress in otp code

--- a/ios/BasaBari/Info.plist
+++ b/ios/BasaBari/Info.plist
@@ -74,6 +74,7 @@
 		<string>JetBrainsMono-Bold.ttf</string>
 		<string>JetBrainsMono-Light.ttf</string>
 		<string>JetBrainsMono-Regular.ttf</string>
+		<string>BerkshireSwash-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
