--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.0",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
