--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.6.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
