--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,7 +139,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "beta-0.6"
     }
     splits {
         abi {
